--- a/crabsoup-lua/Cargo.toml
+++ b/crabsoup-lua/Cargo.toml
@@ -14,6 +14,7 @@ license = "Apache-2.0"
 [dependencies]
 anyhow = { workspace = true }
 mlua = { workspace = true }
+rustyline = { workspace = true }
 tracing = { workspace = true }
 wyrand = { workspace = true }
 
