--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "kuchikiki"]
 	path = crabsoup-kuchikiki
-	url = git@github.com:Lymia/kuchikiki.git
+	url = https://github.com/Lymia/kuchikiki.git
