--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -12,12 +12,18 @@ readme = "README.md"
 license = "Apache-2.0"
 
 [dependencies]
-anyhow = { workspace = true }
+anyhow = "1.0"
+glob = "0.3"
+html5ever = "0.27"
+mlua = { version = "0.9", features = ["luau-jit"] }
+rustyline = { version = "14.0", default-features = false }
+tracing = "0.1"
+wyrand = { version = "0.2", features = ["wyhash"] }
 
-# Local dependencies
-crabsoup-lua = { workspace = true }
+# Internal libraries
+crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "../crabsoup-kuchikiki" }
 
 [build-dependencies]
-anyhow = { workspace = true }
-glob = { workspace = true }
-mlua = { workspace = true }
+anyhow = "1.0"
+glob = "0.3"
+mlua = { version = "0.9", features = ["luau-jit"] }
