--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -13,6 +13,7 @@ license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1.0"
+encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
 glob = "0.3"
 html5ever = "0.27"
 mlua = { version = "0.9", features = ["luau-jit"] }
