--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -17,6 +17,7 @@ encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
 glob = "0.3"
 html5ever = "0.27"
 mlua = { version = "0.9", features = ["luau-jit"] }
+regex = "1.10"
 rustyline = { version = "14.0", default-features = false }
 tracing = "0.1"
 wyrand = { version = "0.2", features = ["wyhash"] }
