--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -13,6 +13,7 @@ license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1.0"
+base64 = "0.22.1"
 encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
 glob = "0.3"
 html5ever = "0.27"
@@ -21,6 +22,7 @@ regex = "1.10"
 rustyline = { version = "14.0", default-features = false }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+urlencoding = "2.1.3"
 wyrand = { version = "0.2", features = ["wyhash"] }
 
 # Cryptography
@@ -29,6 +31,9 @@ md-5 = "0.10"
 sha1 = "0.10"
 sha2 = "0.10"
 blake2 = "0.10"
+
+# Low-usage crates
+tidier = "=0.5.2"
 
 # Internal libraries
 crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "../crabsoup-kuchikiki" }
