--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -12,18 +12,22 @@ readme = "README.md"
 license = "Apache-2.0"
 
 [dependencies]
-anyhow = "1.0"
 base64 = "0.22.1"
 encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
-glob = "0.3"
 html5ever = "0.27"
-mlua = { version = "0.9", features = ["luau-jit"] }
+minijinja = "2.1"
 regex = "1.10"
 rustyline = { version = "14.0", default-features = false }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 urlencoding = "2.1.3"
 wyrand = { version = "0.2", features = ["wyhash"] }
+
+# Codecs
+csv = "1.3"
+serde_json = "1"
+serde_yaml = "0.9"
+toml = "0.8"
 
 # Cryptography
 digest = "0.10"
@@ -35,10 +39,15 @@ blake2 = "0.10"
 # Low-usage crates
 tidier = "=0.5.2"
 
+# Workspace dependencies
+anyhow = { workspace = true }
+glob = { workspace = true }
+mlua = { workspace = true }
+
 # Internal libraries
 crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "../crabsoup-kuchikiki" }
 
 [build-dependencies]
-anyhow = "1.0"
-glob = "0.3"
-mlua = { version = "0.9", features = ["luau-jit"] }
+anyhow = { workspace = true }
+glob = { workspace = true }
+mlua = { workspace = true }
