--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -11,11 +11,15 @@ readme = "README.md"
 
 license = "Apache-2.0"
 
+[features]
+default = ["binary"]
+binary = ["clap"]
+
 [dependencies]
 base64 = "0.22.1"
 chrono = "0.4"
 chrono-tz = { version = "0.9", features = ["case-insensitive"] }
-clap = { version = "4.5", features = ["derive"] }
+clap = { version = "4.5", features = ["derive"], optional = true }
 encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
 html5ever = "0.27"
 minijinja = "2.1"
