--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kuchikiki"]
 	path = crabsoup-kuchikiki
 	url = https://github.com/Lymia/kuchikiki.git
+[submodule "crabsoup-mlua-analyze/luau"]
+	path = crabsoup-mlua-analyze/luau
+	url = https://github.com/luau-lang/luau.git
