--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -19,6 +19,7 @@ binary = ["clap"]
 base64 = "0.22.1"
 chrono = "0.4"
 chrono-tz = { version = "0.9", features = ["case-insensitive"] }
+codespan-reporting = "0.11"
 clap = { version = "4.5", features = ["derive"], optional = true }
 encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
 html5ever = "0.27"
