Temporary commit for complex refactor.

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = crabsoup-kuchikiki
 	url = https://github.com/Lymia/kuchikiki.git
 [submodule "crabsoup-mlua-analyze/luau"]
-	path = crabsoup-mlua-analyze/luau
+	path = crabsoup-luau-sys/luau
 	url = https://github.com/luau-lang/luau.git
