--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "crabsoup",
     "crabsoup-kuchikiki",
+    "crabsoup-luau-sys",
     "crabsoup-mlua-analyze",
 ]
 resolver = "2"
@@ -20,4 +21,5 @@ mlua = { version = "0.9", features = ["luau-jit", "serialize"] }
 
 # Internal dependencies
 crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "crabsoup-kuchikiki" }
+crabsoup-luau-sys = { version = "0.1.0", path = "crabsoup-luau-sys" }
 crabsoup-mlua-analyze = { version = "0.1.0", path = "crabsoup-mlua-analyze" }
