--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -24,6 +24,7 @@ clap = { version = "4.5", features = ["derive"], optional = true }
 encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
 html5ever = "0.27"
 minijinja = "2.1"
+num_cpus = "1.16"
 parking_lot = "0.12"
 regex = "1.10"
 rustyline = { version = "14.0", default-features = false }
