--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -22,6 +22,7 @@ chrono-tz = { version = "0.9", features = ["case-insensitive"] }
 codespan-reporting = "0.11"
 clap = { version = "4.5", features = ["derive"], optional = true }
 encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
+html-escape = "0.2.13"
 html5ever = "0.27"
 minijinja = "2.1"
 num_cpus = "1.16"
