--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crabsoup"
-version = "0.1.0"
+version = "0.1.0-alpha1"
 authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
 edition = "2021"
 
