--- a/crabsoup/Cargo.toml
+++ b/crabsoup/Cargo.toml
@@ -32,6 +32,7 @@ rustyline = { version = "14.0", default-features = false }
 tokio = { version = "1.39", features = ["io-util", "process", "rt", "rt-multi-thread"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+typed-path = "0.9.1"
 urlencoding = "2.1.3"
 wyrand = { version = "0.2", features = ["wyhash"] }
 
